--- a/js network/package.json
+++ b/js network/package.json
@@ -2,6 +2,7 @@
     "name": "socket-chat-example",
     "version": "0.0.1",
     "description": "my first socket.io app",
-    "type": "commonjs",
-    "dependencies": {}
+    "dependencies": {
+        "express": "^4.17.3"
+    }
 }
